green-dao integrated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,22 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
+    }
+    sourceSets {
+        main {
+            java {
+                srcDir 'src-gen'
+            }
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'org.greenrobot:greendao:3.0.1'
+    compile 'net.zetetic:android-database-sqlcipher:3.5.1'
 }
