--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,10 +76,11 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'org.greenrobot:greendao:3.0.1'
     compile 'net.zetetic:android-database-sqlcipher:3.5.1'
+    compile 'com.prolificinteractive:material-calendarview:1.4.0'
 }
 
 File propFile = file('signing.properties');
