--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,23 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        android:theme="@style/Theme.App">
+        <meta-data
+            android:name="CHANNEL_KEY"
+            android:value="${CHANNEL_NAME}" />
+
+        <activity
+            android:name=".ui.base.BootActivity"
+            android:theme="@style/Theme.Boot">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data
-            android:name="CHANNEL_KEY"
-            android:value="${CHANNEL_NAME}" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
