--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,9 @@ apply plugin: 'com.android.application'
 def applicationVersionCode = 1
 def applicationVersionName = "version_name"
 android {
-    compileSdkVersion 21
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
+    useLibrary 'org.apache.http.legacy'
     signingConfigs {
         debug {
         }
@@ -13,7 +14,7 @@ android {
     defaultConfig {
         applicationId "com.architecture"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 28
         versionCode applicationVersionCode
         versionName applicationVersionName
     }
@@ -39,32 +40,39 @@ android {
             }
         }
     }
+
+    flavorDimensions "default"
     productFlavors {
-        qh360 {
-            applicationId "com.example.administrator.android_buide_sample.qh360"
-        }
-        baidu {
-            applicationId "com.example.administrator.android_buide_sample.baidu"
-        }
+        other { dimension "default" }
+        qh360 { dimension "default" }
+        baidu { dimension "default" }
+        pphelper { dimension "default" }
+        wandoujia { dimension "default" }
+        xiaomi { dimension "default" }
+        huawei { dimension "default" }
+        oppo { dimension "default" }
+        vivo { dimension "default" }
+        anzhi { dimension "default" }
+        pgyer { dimension "default" }
+        qq { dimension "default" }
     }
-    productFlavors.all { flavor ->
-        flavor.manifestPlaceholders = [CHANNEL_NAME: name]
+
+    productFlavors.all {
+        flavor ->
+            flavor.manifestPlaceholders = [CHANNEL_NAME: name]
     }
+
     applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            def outputFile = output.outputFile
+        variant.outputs.all {
             def apkPrefix = "pre";
-            if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                File outputDirectory = new File(outputFile.parent);
-                def fileName
-                if (variant.buildType.name == "release") {
-                    // 输出apk名称为pre_versionname_channalname.apk
-                    fileName = apkPrefix + "_${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
-                } else {
-                    fileName = apkPrefix + "_${defaultConfig.versionName}_debug.apk"
-                }
-                output.outputFile = new File(outputDirectory, fileName)
+            def fileName
+            if (variant.buildType.name == "release") {
+                // 输出apk名称为pre_versionname_channalname.apk
+                fileName = apkPrefix + "_${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
+            } else {
+                fileName = apkPrefix + "_${defaultConfig.versionName}_debug.apk"
             }
+            outputFileName = fileName
         }
     }
 }
@@ -76,14 +84,16 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'org.greenrobot:greendao:3.0.1'
-    compile 'net.zetetic:android-database-sqlcipher:3.5.1'
-    compile 'com.prolificinteractive:material-calendarview:1.4.0'
-    compile 'com.google.code.gson:gson:2.7'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'org.greenrobot:greendao:3.0.1'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.1'
+    implementation ('com.prolificinteractive:material-calendarview:1.4.0'){
+        exclude group: 'com.android.support'
+    }
+    implementation 'com.google.code.gson:gson:2.7'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
 
 File propFile = file('signing.properties');
